--- a/.github/workflows/workflow-call-build-container.yaml
+++ b/.github/workflows/workflow-call-build-container.yaml
@@ -1,13 +1,10 @@
 on:
   workflow_call:
     inputs:
-      file:
+      context:
         required: true
         type: string
-        description: 'Path to Dockerfile.'
-      artifact-name:
-        required: true
-        type: string
+        description: 'Path to context archive.'
       args:
         required: false
         type: string
@@ -21,11 +18,8 @@ jobs:
       - name: download context archive
         uses: actions/download-artifact@v3
         with:
-          name: ${{ inputs.artifact-name }}
-      - name: extract context
-        run: |
-          tar -xzvf context.tar.gz
-          rm -f context.tar.gz
+          name: package
+          path: lib
       - name: docker login
         uses: docker/login-action@v2
         with:
@@ -43,9 +37,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.buildx
-          key: ${{ runner.os }}-buildx-${{ hashFiles(inputs.file) }}
+          key: ${{ runner.os }}-buildx-${{ hashFiles(inputs.context) }}
           restore-keys: |
-            ${{ runner.os }}-buildx-${{ hashFiles(inputs.file) }}
+            ${{ runner.os }}-buildx-${{ hashFiles(inputs.context) }}
             ${{ runner.os }}-buildx-
       - name: filter args
         id: filter
@@ -81,9 +75,10 @@ jobs:
       - name: build and push
         run: >-
           docker buildx build
-          --file ${{ inputs.file }}
-          --platform linux/amd64,linux/arm64
+          --attest type=provenance,mode=max
           --cache-from type=local,src=$HOME/.buildx
           --cache-to   type=local,dest=$HOME/.buildx,mode=max
+          --file Dockerfile
+          --platform linux/amd64,linux/arm64
           ${{ steps.filter.outputs.value }}
-          --push .
+          --push - < ${{ inputs.context }}
