--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "author": "escapace <opensource@escapace.com>",
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "devDependencies": {
-    "@commitlint/cli": "17.6.3",
-    "@commitlint/config-conventional": "17.6.3",
-    "@ls-lint/ls-lint": "1.11.2",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
-    "arg": "5.0.2",
-    "c8": "7.13.0",
+    "@commitlint/cli": "17.6.5",
+    "@commitlint/config-conventional": "17.6.5",
+    "@ls-lint/ls-lint": "2.0.0",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
+    "c8": "7.14.0",
     "chai": "4.3.7",
-    "changelogithub": "0.12.9",
     "esbuild": "0.17.19",
     "eslint": "8.41.0",
     "eslint-config-escapace": "3.17.0",
@@ -30,12 +28,12 @@
     "prettier": "2.8.8",
     "prettier-config-escapace": "1.0.5",
     "semver": "7.5.1",
-    "syncpack": "9.8.6",
+    "syncpack": "10.1.0",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">= 18.12.1",
-    "pnpm": ">= 8.4.0"
+    "pnpm": ">= 8.6.0"
   },
   "homepage": "https://github.com/escapace/web-fonts",
   "license": "MPL-2.0",
@@ -45,9 +43,9 @@
     "build": "pnpm run --sequential -r --filter './packages/*' build",
     "lint": "ls-lint && pnpm run -r --filter './packages/*' lint",
     "prepare": "is-ci || husky install",
-    "release": "pnpm run -r --filter './packages/*' release",
     "test": "pnpm run -r --filter './packages/*' test",
-    "typecheck": "pnpm run -r --filter './packages/*' typecheck"
+    "typecheck": "pnpm run -r --filter './packages/*' typecheck",
+    "update": "pnpm -w -r --filter './packages/*' --filter '.' exec ncu -u && pnpm exec syncpack fix-mismatches && pnpm exec syncpack set-semver-ranges"
   },
   "type": "module"
 }
