--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -8,31 +8,32 @@
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
-    "@sindresorhus/fnv1a": "3.0.0",
-    "@types/clean-css": "4.2.6",
-    "arg": "5.0.2",
-    "bignumber.js": "9.1.1",
-    "browserslist": "4.21.5",
-    "bytes": "3.1.2",
-    "chalk": "5.2.0",
-    "clean-css": "5.3.2",
-    "csstype": "3.1.2",
-    "esbuild": "0.17.19",
-    "execa": "7.1.1",
-    "find-up": "6.3.0",
-    "fontfaceobserver": "2.3.0",
-    "fontkit": "2.0.2",
-    "fs-extra": "11.1.1",
-    "hashids": "2.3.0",
-    "lightningcss": "1.20.0",
-    "lodash-es": "4.17.21",
-    "mlly": "1.3.0",
-    "ora": "6.3.1",
-    "safe-stable-stringify": "2.4.3",
-    "strip-ansi": "7.0.1",
-    "url-join": "5.0.0",
-    "wrap-ansi": "8.1.0",
-    "zod": "3.21.4"
+    "@escapace/web-fonts": "workspace:*",
+    "@sindresorhus/fnv1a": "^3.0.0",
+    "@types/clean-css": "^4.2.6",
+    "arg": "^5.0.2",
+    "bignumber.js": "^9.1.1",
+    "browserslist": "^4.21.7",
+    "bytes": "^3.1.2",
+    "chalk": "^5.2.0",
+    "clean-css": "^5.3.2",
+    "csstype": "^3.1.2",
+    "esbuild": "^0.17.19",
+    "execa": "^7.1.1",
+    "find-up": "^6.3.0",
+    "fontfaceobserver": "^2.3.0",
+    "fontkit": "^2.0.2",
+    "fs-extra": "^11.1.1",
+    "hashids": "^2.3.0",
+    "lightningcss": "^1.20.0",
+    "lodash-es": "^4.17.21",
+    "mlly": "^1.3.0",
+    "ora": "^6.3.1",
+    "safe-stable-stringify": "^2.4.3",
+    "strip-ansi": "^7.1.0",
+    "url-join": "^5.0.0",
+    "wrap-ansi": "^8.1.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bytes": "3.1.1",
@@ -45,9 +46,9 @@
     "@types/node": "20.2.5",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
-    "c8": "7.13.0",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
+    "c8": "7.14.0",
     "chai": "4.3.7",
     "eslint": "8.41.0",
     "eslint-config-escapace": "3.17.0",
@@ -62,10 +63,6 @@
     "typescript": "5.0.4",
     "utility-types": "3.10.0"
   },
-  "engines": {
-    "node": ">= 18.12.1",
-    "pnpm": ">= 8.4.0"
-  },
   "exports": {
     ".": {
       "import": "./lib/esm/index.mjs",
@@ -73,7 +70,11 @@
     }
   },
   "files": [
-    "lib/cli",
+    "Dockerfile",
+    "lib/esm",
+    "lib/types",
+    "requirements.txt",
+    "scripts/docker-entrypoint.sh",
     "src/font/font-loader.ts",
     "src/font/font-strip.py"
   ],
@@ -82,7 +83,7 @@
   "private": true,
   "repository": "https://github.com/escapace/web-fonts.git",
   "scripts": {
-    "build": "node ../../scripts/build.mjs",
+    "build": "node ../../scripts/build.mjs && pnpm deploy --filter '@escapace/web-fonts-container' --prod --ignore-scripts lib/context && tar -czf lib/context.tgz -C lib/context .",
     "lint": "eslint 'src/**/*.ts?(x)'",
     "test": "node ../../scripts/test.mjs && c8 mocha --no-warnings --experimental-vm-modules --enable-source-maps 'lib/tests/**/*.spec.js'",
     "typecheck": "tsc --noEmit -p tsconfig.json"
