--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -5,20 +5,20 @@
   "author": "escapace <opensource@escapace.com>",
   "dependencies": {
     "@escapace/web-fonts-container": "workspace:*",
-    "@nodelib/fs.walk": "1.2.8",
-    "arg": "5.0.2",
-    "chalk": "5.2.0",
-    "fontkit": "2.0.2",
-    "lodash-es": "4.17.21",
-    "zod": "3.21.4"
+    "@nodelib/fs.walk": "^1.2.8",
+    "arg": "^5.0.2",
+    "chalk": "^5.2.0",
+    "fontkit": "^2.0.2",
+    "lodash-es": "^4.17.21",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/fontkit": "2.0.3",
     "@types/lodash-es": "4.17.7",
     "@types/node": "20.2.5",
-    "@types/prettier": "2.7.2",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
+    "@types/prettier": "2.7.3",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "eslint": "8.41.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
