--- a/packages/web-fonts/package.json
+++ b/packages/web-fonts/package.json
@@ -5,12 +5,12 @@
   "author": "escapace <opensource@escapace.com>",
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
-    "csstype": "3.1.2",
-    "zod": "3.21.4"
+    "csstype": "^3.1.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "@typescript-eslint/parser": "5.59.7",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
     "eslint": "8.41.0",
     "eslint-config-escapace": "3.17.0",
     "eslint-config-prettier": "8.8.0",
@@ -37,7 +37,7 @@
   "module": "lib/esm/index.mjs",
   "private": false,
   "scripts": {
-    "build": "pnpm run copy-types && node ../../scripts/build.mjs && cp src/types.d.ts lib/types",
+    "build": "node ../../scripts/build.mjs && cp src/types.d.ts lib/types",
     "copy-types": "cp ../container/lib/types/state/user-schema.d.ts src/types.d.ts && prettier --write src/types.d.ts",
     "lint": "eslint 'src/**/*.{js,mjs,cjs,ts,mts,cts}'",
     "release": "node ../../scripts/release.mjs",
