--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,18 +23,6 @@ jobs:
       node-version: ${{ needs.context.outputs.node-version }}
       pnpm-version: ${{ needs.context.outputs.pnpm-version }}
       version: ${{ needs.context.outputs.version }}
-  build-container-node:
-    if: needs.context.outputs.environment == 'production'
-    needs:
-      - context
-      - ci
-    uses: ./.github/workflows/workflow-call-build-container.yaml
-    with:
-      context: lib/context.tgz
-      args: >-
-        --tag ghcr.io/${{ github.repository }}:${{ needs.context.outputs.version }}
-        --build-arg NODE_VERSION=${{ needs.context.outputs.node-version }}
-        --build-arg PNPM_VERSION=${{ needs.context.outputs.pnpm-version }}
   release:
     if: needs.context.outputs.environment == 'production'
     runs-on: ubuntu-latest
@@ -70,7 +58,7 @@ jobs:
 
           while read -d '' -r file; do
             npm publish --provenance --access public "${file}"
-          done < <(find "./lib" -type f -name '*.tgz' -not -name 'context.tgz' -print0 2>/dev/null)
+          done < <(find "./lib" -type f -name '*.tgz' -not -name 'escapace-web-fonts-container-*' -print0 2>/dev/null)
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: publish to npmjs
@@ -84,7 +72,7 @@ jobs:
 
           while read -d '' -r file; do
             npm publish --provenance --access public "${file}"
-          done < <(find "./lib" -type f -name '*.tgz' -not -name 'context.tgz' -print0 2>/dev/null)
+          done < <(find "./lib" -type f -name '*.tgz' -not -name 'escapace-web-fonts-container-*' -print0 2>/dev/null)
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: checkout
@@ -105,3 +93,15 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build-container:
+    if: needs.context.outputs.environment == 'production'
+    needs:
+      - release
+      - context
+      - ci
+    uses: ./.github/workflows/workflow-call-build-container.yaml
+    with:
+      context: 'lib/escapace-web-fonts-container-${{ needs.context.outputs.version }}.tgz'
+      args: >-
+        --tag ghcr.io/${{ github.repository }}:${{ needs.context.outputs.version }}
+        --build-arg NODE_VERSION=${{ needs.context.outputs.node-version }}
