--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -11,23 +11,24 @@
     "@escapace/web-fonts": "workspace:*",
     "@sindresorhus/fnv1a": "^3.0.0",
     "@types/clean-css": "^4.2.6",
+    "@yeuxjs/browserslist-to-targets": "^5.6.0",
     "arg": "^5.0.2",
     "bignumber.js": "^9.1.1",
-    "browserslist": "^4.21.7",
+    "browserslist": "^4.21.9",
     "bytes": "^3.1.2",
     "chalk": "^5.2.0",
     "clean-css": "^5.3.2",
     "csstype": "^3.1.2",
-    "esbuild": "^0.17.19",
+    "esbuild": "^0.18.8",
     "execa": "^7.1.1",
     "find-up": "^6.3.0",
     "fontfaceobserver": "^2.3.0",
     "fontkit": "^2.0.2",
     "fs-extra": "^11.1.1",
     "hashids": "^2.3.0",
-    "lightningcss": "^1.21.0",
+    "lightningcss": "^1.21.1",
     "lodash-es": "^4.17.21",
-    "mlly": "^1.3.0",
+    "mlly": "^1.4.0",
     "ora": "^6.3.1",
     "safe-stable-stringify": "^2.4.3",
     "strip-ansi": "^7.1.0",
@@ -43,14 +44,14 @@
     "@types/fs-extra": "11.0.1",
     "@types/lodash-es": "4.17.7",
     "@types/mocha": "10.0.1",
-    "@types/node": "20.2.5",
+    "@types/node": "20.3.1",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.9",
-    "@typescript-eslint/parser": "5.59.9",
-    "c8": "7.14.0",
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "@typescript-eslint/parser": "5.60.0",
+    "c8": "8.0.0",
     "chai": "4.3.7",
-    "eslint": "8.42.0",
+    "eslint": "8.43.0",
     "eslint-config-escapace": "3.17.1",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-editorconfig": "4.0.3",
