--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -8,10 +8,10 @@
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
-    "@escapace/web-fonts": "workspace:*",
+    "@escapace/web-fonts": "^1.0.0",
     "@sindresorhus/fnv1a": "^3.0.0",
     "@types/clean-css": "^4.2.6",
-    "@yeuxjs/browserslist-to-targets": "^5.7.2",
+    "@yeuxjs/browserslist-to-targets": "^5.9.2",
     "arg": "^5.0.2",
     "bignumber.js": "^9.1.1",
     "browserslist": "^4.21.9",
@@ -26,7 +26,7 @@
     "fontkit": "^2.0.2",
     "fs-extra": "^11.1.1",
     "hashids": "^2.3.0",
-    "lightningcss": "^1.21.2",
+    "lightningcss": "^1.21.5",
     "lodash-es": "^4.17.21",
     "mlly": "^1.4.0",
     "ora": "^6.3.1",
@@ -44,11 +44,11 @@
     "@types/fs-extra": "11.0.1",
     "@types/lodash-es": "4.17.7",
     "@types/mocha": "10.0.1",
-    "@types/node": "20.3.3",
+    "@types/node": "20.4.1",
     "@types/url-join": "4.0.1",
     "@types/wrap-ansi": "8.0.1",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
     "c8": "8.0.0",
     "chai": "4.3.7",
     "eslint": "8.44.0",
@@ -58,7 +58,7 @@
     "eslint-plugin-no-null": "1.0.2",
     "lint-staged": "13.2.3",
     "mocha": "10.2.0",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0",
     "prettier-config-escapace": "1.0.6",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
