--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
   "dependencies": {
-    "@escapace/web-fonts-container": "workspace:*",
+    "@escapace/web-fonts-container": "^0.0.0",
     "@nodelib/fs.walk": "^1.2.8",
     "arg": "^5.0.2",
     "chalk": "^5.3.0",
@@ -15,17 +15,17 @@
   "devDependencies": {
     "@types/fontkit": "2.0.3",
     "@types/lodash-es": "4.17.7",
-    "@types/node": "20.3.3",
+    "@types/node": "20.4.1",
     "@types/prettier": "2.7.3",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
     "eslint": "8.44.0",
     "eslint-config-escapace": "3.17.1",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-editorconfig": "4.0.3",
     "eslint-plugin-no-null": "1.0.2",
     "lint-staged": "13.2.3",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0",
     "prettier-config-escapace": "1.0.6",
     "tsx": "3.12.7",
     "typescript": "5.1.6"
