--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -8,7 +8,7 @@
   },
   "bugs": "https://github.com/escapace/web-fonts/issues",
   "dependencies": {
-    "@escapace/web-fonts": "^1.0.0",
+    "@escapace/web-fonts": "workspace:*",
     "@sindresorhus/fnv1a": "^3.0.0",
     "@types/clean-css": "^4.2.6",
     "@yeuxjs/browserslist-to-targets": "^5.9.2",
