--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
   "dependencies": {
-    "@escapace/web-fonts-container": "^0.0.0",
+    "@escapace/web-fonts-container": "workspace:*",
     "@nodelib/fs.walk": "^1.2.8",
     "arg": "^5.0.2",
     "chalk": "^5.3.0",
