--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@escapace/web-fonts-metrics",
+  "name": "@escapace/web-font-metrics",
   "description": "",
   "version": "0.0.0",
   "author": "escapace <opensource@escapace.com>",
   "dependencies": {
-    "@escapace/web-fonts-container": "workspace:*",
+    "@escapace/web-font-container": "workspace:*",
     "@nodelib/fs.walk": "^1.2.8",
     "arg": "^5.0.2",
     "chalk": "^5.3.0",
@@ -34,7 +34,7 @@
   "private": true,
   "scripts": {
     "build": "node ../../scripts/build.mjs",
-    "codegen": "tsx src/codegen.ts > ../web-fonts/src/fonts.ts",
+    "codegen": "tsx src/codegen.ts > ../web-font/src/fonts.ts",
     "lint": "eslint 'src/**/*.{js,mjs,cjs,ts,mts,cts}'",
     "typecheck": "tsc --noEmit"
   },
