--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -32,6 +32,7 @@
   },
   "license": "MPL-2.0",
   "private": true,
+  "repository": "escapace/satie",
   "scripts": {
     "build": "node ../../scripts/build.mjs",
     "codegen": "tsx src/codegen.ts > ../satie/src/fonts.ts",
