--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -11,25 +11,25 @@
     "@escapace/satie": "workspace:*",
     "@sindresorhus/fnv1a": "^3.1.0",
     "@types/clean-css": "^4.2.11",
-    "@yeuxjs/browserslist-to-targets": "^5.10.6",
+    "@yeuxjs/browserslist-to-targets": "^5.10.7",
     "arg": "^5.0.2",
     "bignumber.js": "^9.1.2",
-    "browserslist": "^4.22.2",
+    "browserslist": "^4.23.0",
     "bytes": "^3.1.2",
     "chalk": "^5.3.0",
     "clean-css": "^5.3.3",
-    "csstype": "^3.1.2",
-    "esbuild": "^0.19.8",
+    "csstype": "^3.1.3",
+    "esbuild": "^0.20.1",
     "execa": "^8.0.1",
-    "find-up": "^6.3.0",
+    "find-up": "^7.0.0",
     "fontfaceobserver": "^2.3.0",
     "fontkit": "^2.0.2",
     "fs-extra": "^11.2.0",
     "hashids": "^2.3.0",
-    "lightningcss": "^1.22.1",
+    "lightningcss": "^1.24.0",
     "lodash-es": "^4.17.21",
-    "mlly": "^1.4.2",
-    "ora": "^7.0.1",
+    "mlly": "^1.6.0",
+    "ora": "^8.0.1",
     "safe-stable-stringify": "^2.4.3",
     "strip-ansi": "^7.1.0",
     "url-join": "^5.0.0",
@@ -38,36 +38,36 @@
   },
   "devDependencies": {
     "@types/bytes": "3.1.4",
-    "@types/chai": "4.3.11",
+    "@types/chai": "4.3.12",
     "@types/fontfaceobserver": "2.1.3",
     "@types/fontkit": "2.0.6",
     "@types/fs-extra": "11.0.4",
     "@types/lodash-es": "4.17.12",
     "@types/mocha": "10.0.6",
-    "@types/node": "20.10.3",
+    "@types/node": "20.11.20",
     "@types/url-join": "4.0.3",
     "@types/wrap-ansi": "8.0.2",
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
-    "c8": "8.0.1",
-    "chai": "4.3.10",
-    "eslint": "8.55.0",
-    "eslint-config-escapace": "3.18.2",
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
+    "c8": "9.1.0",
+    "chai": "5.1.0",
+    "eslint": "8.56.0",
+    "eslint-config-escapace": "3.19.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-editorconfig": "4.0.3",
     "eslint-plugin-no-null": "1.0.2",
-    "lint-staged": "15.2.0",
-    "mocha": "10.2.0",
-    "prettier": "3.1.0",
+    "lint-staged": "15.2.2",
+    "mocha": "10.3.0",
+    "prettier": "3.2.5",
     "prettier-config-escapace": "1.0.6",
-    "tsx": "4.6.2",
-    "typescript": "5.3.2",
-    "utility-types": "3.10.0"
+    "tsx": "4.7.1",
+    "typescript": "5.3.3",
+    "utility-types": "3.11.0"
   },
   "exports": {
     ".": {
-      "import": "./lib/esm/index.mjs",
-      "types": "./lib/types/index.d.ts"
+      "types": "./lib/types/index.d.ts",
+      "import": "./lib/esm/index.mjs"
     }
   },
   "files": [
