--- a/packages/satie/package.json
+++ b/packages/satie/package.json
@@ -5,26 +5,26 @@
   "author": "escapace <opensource@escapace.com>",
   "bugs": "https://github.com/escapace/satie/issues",
   "dependencies": {
-    "csstype": "^3.1.2",
+    "csstype": "^3.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
-    "eslint": "8.55.0",
-    "eslint-config-escapace": "3.18.2",
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
+    "eslint": "8.56.0",
+    "eslint-config-escapace": "3.19.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-editorconfig": "4.0.3",
     "eslint-plugin-no-null": "1.0.2",
-    "lint-staged": "15.2.0",
-    "prettier": "3.1.0",
+    "lint-staged": "15.2.2",
+    "prettier": "3.2.5",
     "prettier-config-escapace": "1.0.6",
-    "typescript": "5.3.2"
+    "typescript": "5.3.3"
   },
   "exports": {
     ".": {
-      "import": "./lib/esm/index.mjs",
-      "types": "./lib/types/index.d.ts"
+      "types": "./lib/types/index.d.ts",
+      "import": "./lib/esm/index.mjs"
     }
   },
   "files": [
