chore: update .github/dependabot.yaml

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -10,3 +10,14 @@ updates:
     labels:
       - 'dependencies'
       - 'github-actions'
+  - package-ecosystem: pip
+    directory: '/packages/container'
+    schedule:
+      interval: weekly
+      day: saturday
+      time: '07:00'
+      timezone: GMT
+    open-pull-requests-limit: 10
+    commit-message:
+      prefix: fix
+      include: scope
