--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -6,7 +6,7 @@ updates:
       interval: weekly
       day: saturday
       time: '07:00'
-      timezone: GMT
+      timezone: Etc/UTC
     labels:
       - 'dependencies'
       - 'github-actions'
@@ -16,7 +16,7 @@ updates:
       interval: weekly
       day: saturday
       time: '07:00'
-      timezone: GMT
+      timezone: Etc/UTC
     open-pull-requests-limit: 10
     commit-message:
       prefix: fix
