--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo",
+  "name": "satie",
   "description": "",
   "version": "0.0.0",
   "author": {
@@ -10,9 +10,10 @@
   "devDependencies": {
     "@commitlint/cli": "19.2.1",
     "@commitlint/config-conventional": "19.1.0",
+    "@escapace/pnpm-pack": "0.1.0",
     "@ls-lint/ls-lint": "2.2.3",
-    "@typescript-eslint/eslint-plugin": "7.3.1",
-    "@typescript-eslint/parser": "7.3.1",
+    "@typescript-eslint/eslint-plugin": "7.4.0",
+    "@typescript-eslint/parser": "7.4.0",
     "c8": "9.1.0",
     "chai": "5.1.0",
     "esbuild": "0.20.2",
@@ -35,9 +36,13 @@
     "typescript": "5.4.3"
   },
   "engines": {
-    "node": ">=20.11.1",
-    "pnpm": ">=8.15.1"
+    "node": ">=20.12.0",
+    "pnpm": ">=8.15.6"
   },
+  "files": [
+    "pnpm-lock.yaml",
+    "pnpm-workspace.yaml"
+  ],
   "homepage": "https://github.com/escapace/satie",
   "license": "MPL-2.0",
   "private": true,
@@ -45,7 +50,8 @@
   "scripts": {
     "build": "pnpm run --sequential -r --filter './packages/*' build",
     "lint": "ls-lint && pnpm run -r --filter './packages/*' lint",
-    "prepare": "is-ci || husky install",
+    "pack": "pnpm-pack workspace",
+    "prepare": "is-ci || husky",
     "test": "pnpm run -r --filter './packages/*' test",
     "typecheck": "pnpm run -r --filter './packages/*' typecheck",
     "update": "pnpm -w -r --filter './packages/*' --filter '.' exec ncu -u && pnpm exec syncpack fix-mismatches && pnpm exec syncpack set-semver-ranges"
