--- a/.github/workflows/workflow-call-ci.yaml
+++ b/.github/workflows/workflow-call-ci.yaml
@@ -85,4 +85,6 @@ jobs:
         with:
           retention-days: 3
           name: package
-          path: 'lib/*.tgz'
+          path: |
+            **/lib/*.tgz
+            !**/node_modules/**
