--- a/.github/workflows/workflow-call-context.yaml
+++ b/.github/workflows/workflow-call-context.yaml
@@ -39,6 +39,10 @@ jobs:
       prerelease: ${{ fromJSON(steps.action-context.outputs.prerelease) }}
       ref: ${{ steps.ref.outputs.value }}
       version: ${{ steps.action-context.outputs.version }}
+      docker-meta-tags: ${{ steps.docker-meta.outputs.tags }}
+      docker-meta-annotations: ${{ steps.docker-meta.outputs.annotations }}
+      docker-meta-labels: ${{ steps.docker-meta.outputs.labels }}
+      docker-meta-json: ${{ steps.docker-meta.outputs.json }}
     steps:
       - id: ref
         name: ref
@@ -58,6 +62,18 @@ jobs:
         uses: escapace/action-context@v0.7.2
         with:
           token: ${{ github.token }}
+      - name: docker meta
+        id: docker-meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          context: git
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=raw,value=latest,enable={{is_default_branch}}
       - id: node-version
         name: node-version
         shell: bash
